--- a/style.css
+++ b/style.css
@@ -51,12 +51,12 @@ a{text-decoration: none;
     justify-content: center;
     font-size: 1em;
 }
-a:hover{
+a:focus{
     padding: 10px 20px;
     border:solid 1px;
-    border-radius: #458a6d 80px;
+    border-radius:80px #0d0e0d;
     color:#458a6d;
-    box-shadow: #ffffff 5px;
+    box-shadow: #ffffff 10px;
 }
 .links{ 
     font-size:18px;
@@ -71,8 +71,8 @@ a[href="#contacto"]{
     border-radius: 80px;
     background-color:#458a6d;
 }
-a[href="#contacto"]:hover{
-    color: black;
+a[href="#contacto"]:focus{
+    box-shadow: rgba(166, 228, 199, 0.25) 0px 30px 60px -12px;
 }
 
 h1{
